--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body style="background-color:rgb(230, 176, 221);">
-    <h1>gyaru</h1>
+    <h1 style="color: rgb(59, 31, 14);">gyaru</h1>
 </body>
 </html>
